; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_wm831x_power.c_wm831x_power_read_voltage.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/power/extr_wm831x_power.c_wm831x_power_read_voltage.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wm831x = type { i32 }
%union.power_supply_propval = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.wm831x*, i32, %union.power_supply_propval*)* @wm831x_power_read_voltage to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @wm831x_power_read_voltage(%struct.wm831x* %0, i32 %1, %union.power_supply_propval* %2) #0 {
  %4 = alloca %struct.wm831x*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %union.power_supply_propval*, align 8
  %7 = alloca i32, align 4
  store %struct.wm831x* %0, %struct.wm831x** %4, align 8
  store i32 %1, i32* %5, align 4
  store %union.power_supply_propval* %2, %union.power_supply_propval** %6, align 8
  %8 = load %struct.wm831x*, %struct.wm831x** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @wm831x_auxadc_read_uv(%struct.wm831x* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp sge i32 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %3
  %14 = load i32, i32* %7, align 4
  %15 = load %union.power_supply_propval*, %union.power_supply_propval** %6, align 8
  %16 = bitcast %union.power_supply_propval* %15 to i32*
  store i32 %14, i32* %16, align 4
  br label %17

17:                                               ; preds = %13, %3
  %18 = load i32, i32* %7, align 4
  ret i32 %18
}

declare dso_local i32 @wm831x_auxadc_read_uv(%struct.wm831x*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
